#3 : Dockerfile and docker-compose added

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
+# Для Node JS сервера
 HOST=http://localhost
 PORT=3000
 
-DATABASE__HOST=localhost
-DATABASE__USERNAME=super_secret_username
-DATABASE__PASSWORD=super_secret_password
-DATABASE__DATABASE=super_secret_database_name
+# Для docker-compose Postgres базы данных 
+POSTGRES_USER=secret_postgres_username
+POSTGRES_PASSWORD=secret_postgres_password
+POSTGRES_DB=secret_postgres_database_name
