--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
-# Для Node JS сервера
-HOST=http://localhost
-PORT=3000
+APP__HOST=http://localhost
+APP__PORT=5000
 
-# Для docker-compose Postgres базы данных 
-POSTGRES_USER=secret_postgres_username
-POSTGRES_PASSWORD=secret_postgres_password
-POSTGRES_DB=secret_postgres_database_name
+SEQUELIZE__DIALECT=mysql
+SEQUELIZE__LOGGING=true
+SEQUELIZE__HOST=localhost
+SEQUELIZE__USERNAME=super_secret_username
+SEQUELIZE__PASSWORD=super_secret_password
+SEQUELIZE__PORT=3306
+SEQUELIZE__DATABASE=database_development
+SEQUELIZE__TIMEZONE=+00:00
+SEQUELIZE__TIMESTAMPS=true
+DATABASE__ROOT_PASSWORD=super_secret_root_password
