#7 : Request with admin token added, docs updated

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 APP__HOST=http://localhost
 APP__PORT=5000
+APP__JWT_SECRET=secret
+APP__JWT_TOKEN_EXPIRES_IN=15m
 
 SEQUELIZE__DIALECT=mysql
 SEQUELIZE__LOGGING=true
